add wallet type filter
