# docs/swagger.json
@@ -21,6 +21,19 @@
                     "wallet"
                 ],
                 "summary": "Get all wallets",
+                "parameters": [
+                    {
+                        "enum": [
+                            "Savings",
+                            "CreditCard",
+                            "CryptoWallet"
+                        ],
+                        "type": "string",
+                        "description": "Wallet type",
+                        "name": "wallet_type",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
